infra/k8s/courses-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: courses-depl
spec: 
  #number of pods which we want to create running some particular image(replicas)
  replicas: 1
  selector:
    matchLabels:
      app: courses
  template:
    metadata:
      labels:
        app: courses
    spec:
      containers:
        - name: courses
          image: akashtheboss/courses

---
apiVersion: v1
kind: Service
metadata:
  name: courses-srv
spec:
  selector:
    app: courses
  ports:
    - name: courses
      protocol: TCP
      port: 4001
      targetPort: 4001
# To apply this config file, we will run kubectl apply -f courses-depl.yaml
