infra/k8s/student-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: student-srv
spec:
  type: NodePort
  selector: 
    app: student
  ports: 
    - name: student
      protocol: TCP
      port: 4000
      targetPort: 4000
