infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  rules:
    - host: student.com
      http:
        paths: 
          - path: /student/create
            pathType: Prefix
            backend:
              service:
                name: student-clusterip-srv
                port:
                  number: 4000
          - path: /student
            pathType: Prefix
            backend:
              service:
                name: query-srv
                port:
                  number: 4002
          - path: /student/.*/courses
            pathType: ImplementationSpecific
            backend:
              service:
                name: courses-srv
                port:
                  number: 4001 
          - path: /.*
            pathType: ImplementationSpecific
            backend:
              service: 
                name: client-srv
                port:
                  number: 3000
